--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- 메뉴 -->
     <nav class="navbar">
         <ul class="navbar__main">
-            <li><a href=""><img src="imgs/logo.png" alt=""></a></li>
+            <li class="logo"><a href=""><img src="imgs/logo.png" alt=""></a></li>
             <li>
                 <a href="">익산여행</a>
                 <div class="navbar__sub">
