--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <nav class="navbar">
         <ul class="navbar__main">
             <li class="logo"><a href=""><img src="imgs/logo.png" alt=""></a></li>
-            <li>
+            <li data-num="1">
                 <a href="">익산여행</a>
-                <div class="navbar__sub">
+                <div class="navbar__sub" data-sub="1">
                     <ul>
                         <li class="title"><a href="">관광명소</a></li>
                         <li class="title"><a href="">농촌체험여행</a></li>
@@ -59,9 +59,9 @@
                     </ul>
                 </div>
             </li>
-            <li>
+            <li data-num="2">
                 <a href="">익산시티투어</a>
-                <div class="navbar__sub">
+                <div class="navbar__sub" data-sub="2">
                     <ul>
                         <li class="title">
                             <a href="">시티투어안내</a>
@@ -77,9 +77,9 @@
                     </ul>
                 </div>
             </li>
-            <li>
+            <li data-num="3">
                 <a href="">익산축제</a>
-                <div class="navbar__sub">
+                <div class="navbar__sub" data-sub="3">
                     <ul>
                         <li class="title"><a href="">익산서동축제</a></li>
                         <li class="title"><a href="">익산천만송이국화축제</a></li>
@@ -87,9 +87,9 @@
                     </ul>
                 </div>
             </li>
-            <li>
+            <li data-num="4">
                 <a href="">맛집/숙박/특산물</a>
-                <div class="navbar__sub">
+                <div class="navbar__sub" data-sub="4">
                     <ul>
                         <li class="title">
                             <a href="">맛집</a>
@@ -112,9 +112,9 @@
                     </ul>
                 </div>
             </li>
-            <li>
+            <li data-num="5">
                 <a href="">역사/문화재</a>
-                <div class="navbar__sub">
+                <div class="navbar__sub" data-sub="5">
                     <ul>
                         <li class="title">
                             <a href="">세계유산</a>
@@ -140,9 +140,9 @@
                     </ul>
                 </div>
             </li>
-            <li>
+            <li data-num="6">
                 <a href="">익산여행가이드</a>
-                <div class="navbar__sub">
+                <div class="navbar__sub" data-sub="6">
                     <ul>
                         <li class="title"><a href="">공지사항</a></li>
                         <li class="title">
