--- a/index.html
+++ b/index.html
@@ -380,22 +380,45 @@
             <i class="fas fa-map-marked-alt"></i>
             <h1>여행 추천 코스</h1>
         </div>
-        <div class="course__container">
-            <div class="course__slide">
-                <a href="" class="course-img">
-                    <img src="imgs/course1.jpg" alt="">
-                    <div class="course__description">
-                        <span></span>
-                        <button><a>자세히 보기</a></button>
-                    </div>
-                </a>
+        <section id="container">
+            <div class="slide">
+                <div class="slides">
+                    <a href="">
+                        <img src="imgs/course1.jpg" alt="">
+                        <div class="course__description">
+                            <span>반나절 코스</span>
+                            <button><a>자세히 보기</a></button>
+                        </div>
+                    </a>
+                </div><!--1-->
+                <div class="slides">
+                    <a href="">
+                        <img src="imgs/course2.jpg" alt="">
+                        <div class="course__description">
+                            <span>하루 코스</span>
+                            <button><a>자세히 보기</a></button>
+                        </div>
+                    </a>
+                </div>
+                <div class="slides">
+                    <a href="">
+                        <img src="imgs/course3.jpg" alt="">
+                        <div class="course__description">
+                            <span>1박2일 코스</span>
+                            <button><a>자세히 보기</a></button>
+                        </div>
+                    </a>
+                </div>
             </div>
-            <div class="course__button">
-                <button class="slidebtn" data-slide="1"><i class="fas fa-circle"></i></button>
-                <button class="slidebtn" data-slide="2"><i class="fas fa-circle"></i></button>
-                <button class="slidebtn" data-slide="3"><i class="fas fa-circle"></i></button>
-            </div>
-        </div>
+            </section>
+            <section id="pager">
+                <ul class="dotContainer">
+                    <li data-current="1"><span class="dots on"></span></li>
+                    <li data-current="2"><span class="dots"></span></li>
+                    <li data-current="3"><span class="dots"></span></li>
+                </ul>
+            </section>
+        </section>
     </section>
 
     <!-- 특산물 -->
