JS tour slide modify

--- a/index.html
+++ b/index.html
@@ -268,50 +268,62 @@
         <h1>관광명소</h1>
         <span class="description">익산시의 다양한 관광명소를 소개합니다</span>
         <div class="tour__wrapper">
-            <ul class="tour__slide">
-                <li><a href="">
-                    <img src="imgs/tour.jpg" alt="">
-                    <div class="tour__description">
+            <div class="tour__slide">
+                <div class="tour__slides">
+                    <div class="place">
+                        <img src="imgs/tour.jpg" alt="">
+                        <div class="tour__description">
                         <span>박물관</span>
                         <button><a href="">자세히 보기</a></button>
+                        </div>
                     </div>
-                </a></li>
-                <li><a href="">
-                    <img src="imgs/tour2.jpg" alt="">
-                    <div class="tour__description">
+                </div>
+                <div class="tour__slides">
+                    <div class="place">
+                        <img src="imgs/tour2.jpg" alt="">
+                        <div class="tour__description">
                         <span>드라마세트장</span>
                         <button><a href="">자세히 보기</a></button>
+                        </div>
                     </div>
-                </a></li>
-                <li><a href="">
-                    <img src="imgs/tour3.jpg" alt="">
-                    <div class="tour__description">
+                </div>
+                <div class="tour__slides">
+                    <div class="place">
+                        <img src="imgs/tour3.jpg" alt="">
+                        <div class="tour__description">
                         <span>공원/유원시설</span>
                         <button><a href="">자세히 보기</a></button>
-                    </div>
-                </a></li>
-                <li><a href="">
-                    <img src="imgs/tour4.jpg" alt="">
-                    <div class="tour__description">
+                        </div>
+                    </div>   
+                </div> 
+                <div class="tour__slides">
+                    <div class="place">
+                        <img src="imgs/tour4.jpg" alt="">
+                        <div class="tour__description">
                         <span>전통시장</span>
                         <button><a href="">자세히 보기</a></button>
+                        </div>
                     </div>
-                </a></li>
-                <li><a href="">
-                    <img src="imgs/tour5.jpg" alt="">
-                    <div class="tour__description">
+                </div>
+                <div class="tour__slides">
+                    <div class="place">
+                        <img src="imgs/tour5.jpg" alt="">
+                        <div class="tour__description">
                         <span>유적지</span>
                         <button><a href="">자세히 보기</a></button>
+                        </div>
                     </div>
-                </a></li>
-                <li><a href="">
-                    <img src="imgs/tour6.jpg" alt="">
-                    <div class="tour__description">
+                </div>
+                <div class="tour__slides">
+                    <div class="place">
+                        <img src="imgs/tour6.jpg" alt="">
+                        <div class="tour__description">
                         <span>농촌체험시설</span>
                         <button><a href="">자세히 보기</a></button>
+                        </div>
                     </div>
-                </a></li>
-            </ul>
+                </div>
+            </div>
         </div>
         <div class="tour__controller">
             <button class="prev"><i class="fas fa-chevron-left"></i></button>
